Added Sanity Tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 env/
 .idea/
-test.py
 src/__pycache__/
 src/attention/__pycache__/
 src/decoder/__pycache__/
 src/encoder/__pycache__/
+.ipynb_checkpoints/
