--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,91 @@
+appnope==0.1.0
+attrs==19.3.0
+backcall==0.1.0
+bleach==3.1.5
+blis==0.4.1
+catalogue==1.0.0
 certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.2
 configparser==5.0.0
 cycler==0.10.0
+cymem==2.0.3
+decorator==4.4.2
+defusedxml==0.6.0
 docker-pycreds==0.4.0
+entrypoints==0.3
 future==0.18.2
 gitdb==4.0.5
 GitPython==3.1.3
 gql==0.2.0
 graphql-core==1.1
 idna==2.9
+importlib-metadata==1.6.1
+ipykernel==5.3.0
+ipython==7.15.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jedi==0.17.0
+Jinja2==2.11.2
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.3
+jupyter-console==6.1.0
+jupyter-core==4.6.3
 kiwisolver==1.2.0
+MarkupSafe==1.1.1
 matplotlib==3.2.1
+mistune==0.8.4
+murmurhash==1.0.2
+nbconvert==5.6.1
+nbformat==5.0.6
+notebook==6.0.3
 numpy==1.18.5
 nvidia-ml-py3==7.352.0
+packaging==20.4
+pandocfilters==1.4.2
+parso==0.7.0
 pathtools==0.1.2
+pexpect==4.8.0
+pickleshare==0.7.5
+plac==1.1.3
+preshed==3.0.2
+prometheus-client==0.8.0
 promise==2.3
+prompt-toolkit==3.0.5
 psutil==5.7.0
+ptyprocess==0.6.0
+Pygments==2.6.1
 pyparsing==2.4.7
+pyrsistent==0.16.0
 python-dateutil==2.8.1
 PyYAML==5.3.1
+pyzmq==19.0.1
+qtconsole==4.7.4
+QtPy==1.9.0
 requests==2.23.0
+Send2Trash==1.5.0
+sentencepiece==0.1.91
 sentry-sdk==0.14.4
 shortuuid==1.0.1
 six==1.15.0
 smmap==3.0.4
+spacy==2.2.4
+srsly==1.0.2
 subprocess32==3.5.4
+terminado==0.8.3
+testpath==0.4.4
+thinc==7.4.0
 torch==1.5.0
+torchtext==0.6.0
+tornado==6.0.4
 tqdm==4.46.1
+traitlets==4.3.3
 urllib3==1.25.9
 wandb==0.9.0
+wasabi==0.6.0
 watchdog==0.10.2
+wcwidth==0.2.4
+webencodings==0.5.1
+widgetsnbextension==3.5.1
+zipp==3.1.0
